# python-flight-software-NOTINUSE

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Gopkg.toml  PIDboi.py  Pipfile  README.md  amplifier.go  boundaries.yaml  config.json  config_default.yaml  config_default.yml  groundstation.py  imu.py  imucode.py  main.go  main.py  private.pem  requirements.txt  structure.md  supervsiordraft.go  tasks.py
SPI/: config_default.yml  main.go  test.go
arduino_flight_software/sensor_arduino/: sensor_arduino.ino
arduino_flight_software/sensor_arduino_simulation/: sensor_arduino_simulation.ino
arduino_flight_software/valve_arduino_launchboxsimulation/: valve_arduino_launchboxsimulation.ino
doc/: conf.py
flight_software/: .gitignore  Pipfile  arduino_test.py  black_box.txt  boundaries.yaml  code.py  config.json  main.py  requirements.txt  startup.py  telemetry_test.py  test.py
flight_software/modules/: __init__.py
flight_software/modules/devices/: arduino.py  device.py
flight_software/modules/drivers/: arduino.py  driver.py  imu_driver.py  sensor_arduino_driver.py  telemetry_driver.py  valve_arduino_driver.py
flight_software/modules/mcl/: errors.py  flag.py  helpers.py  logging.py  old_registry.txt  registry.py  supervisor.py
flight_software/modules/sensors/: .kalmanTest.py.swp  __init__.py  imu.py  (+4 more)
i2cCode/: i2cCode.ino  imu_test.py
modules/: __init__.py  external.go  external.py  imu.py  pid.py  process.py  radio.py  telemetry.py  tvc.py
modules/blackbox/: main.go
modules/sensors/: __init__.py  ads1115.py  boundaries.yaml  const.go  force.py  imu.go  imu.py  inter.go  kalman.py  kalmanTest.py  main.go  sensor.py  servoTest.go  temperature.py  test.py  thermocouple.go  thermocouple.py  valve.py
modules/supervisor/: __init__.py  ingest.py  main.go
modules/telemetry/: __init__.py  encryption.py  ingest.go  interpret.py  key_gen.py  logging.py  main.go  packet.py  public.pem  publickey.txt  tcp_socket.py  test.py
modules/testsensors/: main.go
modules/valve/: __init__.py
src/: config.json  main  main.cpp  main.rs
src/arduino/: launchbox_arduino_v2.ino
src/modules/: _mod.rs
src/pi/: black_box.txt  config.json  full_test.py  hardware_config.json  hardware_test.py  main.cpp  main.py  main.py.save  notes.txt  package-lock.json  sample_config.json  sensor_test.py  telemetry_test.py  timer_test.py  valve_arduino_test.py  valve_only_test.py  valve_test.py
testing/: imu.py  imuTest.py  kalmanTest.py  test2.py  test3.py
testing/force/: hx711.py
testing/i2c/: i2c_test.py  master.py  master2.py  receive.py  slave.ino  writetest.py
testing/kalman-examples/: kalman_test.py  pykalman_test.py
testing/sensors/: sensors_test.py  thermocouple.py
(+172 files in other folders)
